--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
 button  {
 	width:200px;
 	height:200px;
-	font-size:10px;	
+	font-size:100px;	
+	margin-left:50%;
+	margin-right:50%;
+	margin-top:20%;
+	border-radius:50%;
+	outline:0px;
 }
 body{
 	background-color:black;
 	color:white;
 }
 .fa-microphone{
-	font-size:100px;
+	font-size:500px;
+	text-align:center;
+	width:100px;
+	height:100px;
 }
-
+p {
+	text-align:center;
+}
 
 svg{
 display: block;
@@ -165,8 +175,8 @@ if(sp == "open new tab on chrome"){
 
 
 rec.start();
-}
 
+}
 
 	
 
@@ -175,8 +185,8 @@ rec.start();
 
 
 
-</script>
-<script type="text/javascript">
+
+
 
 window.onload = function () {
     "use strict";
@@ -235,7 +245,9 @@ window.onload = function () {
                               null;*/
     navigator.getUserMedia({audio:true}, soundAllowed, soundNotAllowed);
 
-};
+}
+
+
 </script>
 
 <p id="demo" >Say Something...</p>
