--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ if(sp == "what's your name" || sp == "what is your name"){
 	say("My name is Samantha"); 
 }
 
-if(sp == "what's the fuck" || sp == "what is your fuck" || sp == "what the f***"){
+if(sp == "what's the fuck" || sp == "what is your fuck" || sp == "what the f***" || sp == "f***"){
 	say("Fuck yourself"); 
 }
 
