--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ window.onload = function () {
            <rect x="0" y="0" width="100%" height="100%" fill="url(#gradient)" mask="url(#mask)"></rect>
        </svg>
 
+<p style="fon-size:10px;text-align:center;" >Created by Fahad Ali</p>
 
 </body>
 </html>
