--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@ x.setAttribute("controls", "controls");
 document.body.appendChild(x);
 	}
 
+if(sp !== "sing a song"){
+	var ad = document.getElementById('ad');
+ad.style.display ="none";
+}
+	
 if(sp == "what's your name" || sp == "what is your name"){
 	say("My name is Samantha"); 
 }
