--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ if(sp == "sing a song"){
 var x = document.createElement("AUDIO");
 
 if (x.canPlayType("audio/mpeg")) {
-  x.setAttribute("src","http://localhost:8080/navigator/horse.mp3");
+  x.setAttribute("src","horse.mp3");
 } 
 x.setAttribute("id", "ad"); 
 var y = document.getElementById('ad');
