--- a/index.html
+++ b/index.html
@@ -139,7 +139,21 @@ if(sp == "what's your name" || sp == "what is your name"){
 	say("My name is Samantha"); 
 }
 
-	
+if(sp == "what's the fuck" || sp == "what is your fuck" || sp == "what the f***"){
+	say("Fuck yourself"); 
+}
+
+if(sp == "I love you"){
+ say("i can't love you because i have no heart");
+}
+
+if( sp == "creator" || sp == "who is your Creator"){
+ say("Fahad Ali Make me.");
+}
+
+if(sp == "open new tab on chrome"){
+	location.href = "chrome://newtab";
+}	
 if(sp == "sing a song"){
 var x = document.createElement("AUDIO");
 
